--- a/app/src/main/res/layout/auth_ui_layout.xml
+++ b/app/src/main/res/layout/auth_ui_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:layout_marginBottom="16dp"
+    android:layout_marginBottom="0dp"
     android:layout_marginLeft="0dp"
     android:layout_marginRight="0dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="0dp"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#000000">
@@ -18,10 +18,10 @@
             android:gravity="center"
             android:drawableTop="@drawable/foodrev_logo"
             android:text="User Authentication"
-            android:layout_marginTop="94dp"
-            android:layout_alignParentTop="true"
+            android:layout_above="@+id/sign_in"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="103dp" />
 
         <Button
             android:id="@+id/sign_in"
@@ -31,9 +31,6 @@
             android:text="@string/sign_in"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="96dp" /><![CDATA[
-
-    />
-    ]]>
+            android:layout_marginBottom="96dp" />
 </RelativeLayout>
 
