--- a/app/src/main/res/layout/signed_in_layout.xml
+++ b/app/src/main/res/layout/signed_in_layout.xml
@@ -1,73 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_marginBottom="0dp"
+    android:layout_marginLeft="0dp"
+    android:background="#000000"
+    android:layout_marginRight="0dp"
+    android:orientation="vertical"
+    android:layout_marginTop="0dp"
     tools:context=".auth.SignedInActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginTop="16dp"
-        android:orientation="vertical">
 
         <TextView
             style="@style/Base.TextAppearance.AppCompat.Headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:drawableTop="@drawable/firebase_auth_120dp"
-            android:text="@string/signed_in_header" />
+            android:drawableTop="@drawable/foodrev_logo"
+            android:textColor="#FFFFFF"
+            android:text="Signed in  : ) "
+            android:id="@+id/textView"
+            android:layout_above="@+id/linearLayout2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerInParent="true" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/sign_out"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:text="@string/sign_out" />
-
-            <Button
-                android:id="@+id/delete_account"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:text="@string/delete_account_label"
-                android:theme="@style/WarnButton" />
+            android:orientation="horizontal"
+            android:id="@+id/linearLayout">
 
         </LinearLayout>
 
-        <TextView
-            style="@style/Base.TextAppearance.AppCompat.Subhead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/user_profile_header"/>
-
-        <LinearLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/user_profile_picture"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="16dp"
-                android:contentDescription="@string/profile_picture_content_desc"
-                android:src="@drawable/anon_user_48dp" />
+            android:orientation="horizontal"
+            android:id="@+id/linearLayout2"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/user_profile_picture"
+            android:layout_toEndOf="@+id/user_profile_picture">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -77,21 +52,57 @@
                 <TextView
                     android:id="@+id/user_email"
                     android:layout_width="wrap_content"
+                    android:textColor="#FFFFFF"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/user_display_name"
+                    android:textColor="#FFFFFF"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/user_enabled_providers"
                     android:layout_width="wrap_content"
+                    android:textColor="#FFFFFF"
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
-</ScrollView>
+    <ImageView
+        android:id="@+id/user_profile_picture"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="@string/profile_picture_content_desc"
+        android:src="@drawable/anon_user_48dp"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/sign_out"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/sign_out"
+        android:layout_alignTop="@+id/delete_account" />
+
+    <Button
+        android:id="@+id/delete_account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/delete_account_label"
+        android:theme="@style/WarnButton"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/sign_out"
+        android:layout_toEndOf="@+id/sign_out"
+        android:layout_marginLeft="33dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginBottom="92dp" />
+
+</RelativeLayout>
